@@ -1,5 +1,12 @@
 2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
+	* src/utils.py
+	* src/MMapArea.py
+	* src/TextThought.py
+	Use Gtk theme colors and select according to GNOME's HIG.
+
+2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
 	* src/MainWindow.py
 	* src/MMapArea.py
 	Update link positions on bezier/line switch.
